# particle-life

./: Cargo.toml  README.md
palettes/: 3-bit-rgb.hex  atom-8.hex  berry-nebula.hex  clement-8.hex  endesga-8.hex  generic-8.hex  matriax8c.hex  prospecal-8.hex
src/: adaptive_time.rs  app_settings.rs  gpu_physics.rs  gpu_physics_lod.rs  instanced_renderer.rs  lut_manager.rs  main.rs  particle.rs  physics.rs  rendering.rs  shaders.rs  soa_physics.rs  ui.rs  ui_renderer.rs
src/LUTs/: ZELDA_Glass.lut  ZELDA_Monochrome.lut  ZELDA_Rainbow.lut  ZELDA_Slava Ukraini.lut  ZELDA_Terrain.lut  ZELDA_Trans Rights.lut
src/physics/: mod.rs
src/rendering/: mod.rs
src/shaders/: compositor.wgsl  compute.wgsl  fade.wgsl  mod.rs  particle.wgsl  particle_instanced.wgsl  physics_compute.wgsl  physics_compute_lod.wgsl  render.wgsl
src/ui/: mod.rs
